# slate-client-server

./: .dockerignore  .dockleignore  .gitattributes  .gitignore  .trivyignore  AdHocAppInstallRequestSchema.json  AllowedAppListResultSchema.json  AppConfResultSchema.json  AppCreateRequestSchema.json  AppCreateResultSchema.json  AppInstallRequestSchema.json  AppInstallResultSchema.json  AppListResultSchema.json  CMakeLists.txt  ClusterCreateRequestSchema.json  ClusterCreateResultSchema.json  ClusterListResultSchema.json  ClusterUpdateRequestSchema.json  Debug.dockerfile  Dockerfile  FindUserResultSchema.json  InstanceInfoResultSchema.json  InstanceListResultSchema.json  README.md  SecretCreateRequestSchema.json  SecretCreateResultSchema.json  SecretInfoResultSchema.json  SecretListResultSchema.json  UserCreateRequestSchema.json  UserCreateUpdateRequestSchema.json  UserInfoResultSchema.json  UserListResultSchema.json  VOCreateRequestSchema.json  VOCreateResultSchema.json  VOListResultSchema.json  Vagrantfile  docker-compose.yml  docker-entrypoint.sh  foo  index.html  (+3 more)
.github/attic/: pr-client.yml
.github/resources/: minikube.j2
.github/workflows/: aws-cpp-sdk.yml  build-client.yml  codeql.yml  deploy-client.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  development.yml  docker-lint-scan.yml  otel-cpp-client.yml  pr-chart.yml  pr-client.yml  pr-image.yml  pr.yml  push.yml  release-client.yml  slate-api.yml  slate-build-cache.yml  slate-service.yml  unit-tests.yml
ansible/: .ansible-lint  ansible.cfg  environment.yml  playbook.yml  secrets.yml.tmpl
ansible/group_vars/: all.yml  dev.yml  prod.yml
ansible/inventory/: .gitignore  hosts.yml.tmpl
ansible/tasks/: aws-cli.yml  certs-selfsigned.yml  dynamodb-backup.yml  dynamodb-local.yml  dynamodb.yml  firewalld.yml  helm3.yml  monitor-clusters.yml  nginx.yml  os-packages.yml  pip.yml  selinux.yml  slate.yml
ansible/templates/: backup_dynamodb.service.j2  backup_dynamodb.sh.j2  backup_dynamodb.timer.j2  dynamodb.service.j2  nginx.conf.j2  nginx.service.j2  slate-api-server.service  slate.conf.j2
clion/: delete_minikube.sh  start_minikube.sh
clion/runConfigurations/: app.run.xml  cluster.run.xml  group.run.xml  instance.run.xml  monitoring.run.xml  secret.run.xml  user.run.xml  utility.run.xml  volume.run.xml
cmake/: embed_version.sh  extract_version.sh
include/: ApplicationCommands.h  ApplicationInstanceCommands.h  Archive.h  Client.h  ClusterCommands.h  Completion.h  DNSManipulator.h  Entities.h  FileHandle.h  FileSystem.h  Geocoder.h  GroupCommands.h  HTTPRequests.h  KubeInterface.h  Logging.h  MonitoringCredentialCommands.h  OSDetection.h  PersistentStore.h  Process.h  SecretCommands.h  SecretLoading.h  ServerUtilities.h  Telemetry.h  UserCommands.h  Utilities.h  VOCommands.h  VersionCommands.h  VolumeClaimCommands.h  atomic_shim.h  concurrent_multimap.h  crow.h
include/client/: Client.h  Completion.h  SecretLoading.h
include/crow/: app.h  common.h  http_connection.h  http_request.h  utility.h
include/http/: request.h
include/rapidjson/: reader.h
resources/: README.md  TESTING_SETUP.md  build_rpm.sh  delete_local.sh  federation-deployment.yaml  federation-role.yaml  minikube-start.sh  nginx-ingress.yaml  perf.json  slate-cluster-certificate-check.sh  start_local.sh
resources/api_specification/: AdHocAppInstallRequestSchema.json  AllowedAppListResultSchema.json  AppConfResultSchema.json  AppInstallRequestSchema.json  AppInstallResultSchema.json  AppListResultSchema.json  AppVersionsResultSchema.json  ClusterCreateRequestSchema.json  ClusterCreateResultSchema.json  ClusterInfoResultSchema.json  ClusterListResultSchema.json  ClusterPingResultSchema.json  ClusterUpdateRequestSchema.json  CronInfoResultSchema.json  ErrorResultSchema.json  FindUserResultSchema.json  GroupAccessResultSchema.json  GroupCreateRequestSchema.json  GroupCreateResultSchema.json  GroupInfoResultSchema.json  GroupListResultSchema.json  GroupMembershipListResultSchema.json  GroupUpdateRequestSchema.json  InstanceInfoResultSchema.json  InstanceListResultSchema.json  InstanceLogResultSchema.json  InstanceScaleResultSchema.json  InstanceUpdateRequestSchema.json  MonitoringCredentialCreateRequestSchema.json  MonitoringCredentialListResultSchema.json  MonitoringCredentialResultSchema.json  MultiplexRequestSchema.json  MultiplexResultSchema.json  SecretCreateRequestSchema.json  (+15 more)
src/: ApplicationCommands.cpp  ApplicationInstanceCommands.cpp  Archive.cpp  Client.cpp  ClusterCommands.cpp  Completion.cpp  DNSManipulator.cpp  Entities.cpp  FileHandle.cpp  FileSystem.cpp  Geocoder.cpp  GroupCommands.cpp  HTTPRequests.cpp  KubeInterface.cpp  Logging.cpp  MonitoringCredentialCommands.cpp  PersistentStore.cpp  Process.cpp  SecretCommands.cpp  SecretLoading.cpp  ServerUtilities.cpp  StressTest.cpp  Telemetry.cpp  UserCommands.cpp  Utilities.cpp  VOCommands.cpp  VersionCommands.cpp  VolumeClaimCommands.cpp  slate_client.cpp  slate_service.cpp
src/client/: Client.cpp  (+4 more)
test/: CTestCustom.cmake  DBServer.cpp  HTTPRequests.h  HelmServer.cpp  Process.cpp  Process.h  TODO.md  TestAdHocApplicationInstall.cpp  TestApplicationInstall.cpp  TestApplicationListing.cpp  TestClusterAllowedApplicationAddition.cpp  TestClusterAllowedApplicationDeletion.cpp  TestClusterAllowedApplicationListing.cpp  TestClusterAllowedGroupAddition.cpp  TestClusterAllowedGroupChecking.cpp  TestClusterAllowedGroupDeletion.cpp  TestClusterAllowedGroupListing.cpp  TestClusterAllowedVOAddition.cpp  TestClusterAllowedVODeletion.cpp  TestClusterAllowedVOListing.cpp  TestClusterCreation.cpp  TestClusterDeletion.cpp  TestClusterInfo.cpp  TestClusterListing.cpp  TestClusterUpdate.cpp  TestFetchApplicationConfig.cpp  TestFindUser.cpp  TestGroupClusterListing.cpp  TestGroupCreation.cpp  TestGroupDeletion.cpp  TestGroupInfo.cpp  TestGroupListing.cpp  TestGroupMemberListing.cpp  TestGroupUpdate.cpp  TestInstanceDeletion.cpp  TestInstanceDuplicates.cpp  TestInstanceInfoFetching.cpp  TestInstanceListing.cpp  TestInstanceRestarting.cpp  TestInstanceScale.cpp  (+37 more)
test2/: CMakeLists.txt  unit_tests.cpp
(+149 files in other folders)
